1.6.5 (#15)
* Added relational placeholders system

* Added bedrock support

* Added relational placeholders support

* Fixed problems

* Improved readme

* Improved readme

* Fixed internal placeholders

* Improved performance

* Fixed support for 1.19.4

* Changed readme

* Fixed problem on tp
Added support for sit plugins

* Fixed reload problem

* Added else case to placeholder replacements

* Added support for Nexo

* Fixed code factor