@@ -5,6 +5,7 @@ import com.github.retrooper.packetevents.event.PacketListenerAbstract;
 import com.github.retrooper.packetevents.event.PacketReceiveEvent;
 import com.github.retrooper.packetevents.event.PacketSendEvent;
 import com.github.retrooper.packetevents.protocol.entity.data.EntityData;
+import com.github.retrooper.packetevents.protocol.entity.data.EntityDataTypes;
 import com.github.retrooper.packetevents.protocol.packettype.PacketType;
 import com.github.retrooper.packetevents.util.Vector3f;
 import com.github.retrooper.packetevents.wrapper.play.client.WrapperPlayClientEntityAction;
@@ -13,13 +14,23 @@ import com.github.retrooper.packetevents.wrapper.play.server.WrapperPlayServerSe
 import com.github.retrooper.packetevents.wrapper.play.server.WrapperPlayServerTeams;
 import io.github.retrooper.packetevents.util.GeyserUtil;
 import org.alexdev.unlimitednametags.UnlimitedNameTags;
+import org.alexdev.unlimitednametags.hook.FloodgateHook;
+import org.alexdev.unlimitednametags.hook.GeyserHook;
+import org.alexdev.unlimitednametags.hook.ViaVersionHook;
 import org.alexdev.unlimitednametags.packet.PacketNameTag;
+import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class PacketEventsListener extends PacketListenerAbstract {
+
+    private static final Pattern RELATIONAL_PLACEHOLDER = Pattern.compile("%rel_.*?%");
 
     private final UnlimitedNameTags plugin;
 
@@ -62,7 +73,7 @@ public class PacketEventsListener extends PacketListenerAbstract {
         System.out.println(packet.getAction());
         if (packet.getAction() == WrapperPlayClientEntityAction.Action.START_FLYING_WITH_ELYTRA) {
             System.out.println("Flying with elytra");
-            if(!plugin.getConfigManager().getSettings().isShowCurrentNameTag()) {
+            if (!plugin.getConfigManager().getSettings().isShowCurrentNameTag()) {
                 return;
             }
 
@@ -102,11 +113,26 @@ public class PacketEventsListener extends PacketListenerAbstract {
             return;
         }
 
-        plugin.getPacketManager().setPassengers(player.get(), Arrays.stream(packet.getPassengers()).boxed().toList());
+        final List<Integer> passengers = Arrays.stream(packet.getPassengers()).boxed().collect(Collectors.toList());
+
+        plugin.getPacketManager().setPassengers(player.get(), passengers);
+        if(!passengers.contains(optionalPacketDisplayText.get().getEntityId())) {
+            passengers.add(optionalPacketDisplayText.get().getEntityId());
+            packet.setPassengers(passengers.stream().mapToInt(i -> i).toArray());
+        }
     }
 
     private void handleTeams(@NotNull PacketSendEvent event) {
         if (!plugin.getConfigManager().getSettings().isDisableDefaultNameTag()) {
+            return;
+        }
+
+        final Player player = Bukkit.getPlayer(event.getUser().getUUID());
+        if(player == null) {
+            return;
+        }
+
+        if(plugin.getHook(ViaVersionHook.class).map(h -> h.hasNotTextDisplays(player)).orElse(false)) {
             return;
         }
 
@@ -118,13 +144,12 @@ public class PacketEventsListener extends PacketListenerAbstract {
     }
 
     private void handleMetaData(@NotNull PacketSendEvent event) {
-        if (!(event.getPlayer() instanceof Player player)) {
+        if (!(event.getPlayer() instanceof Player)) {
             return;
         }
-
         int protocol = event.getUser().getClientVersion().getProtocolVersion();
         //handle metadata for : bedrock players && client with version 1.20.1 or lower
-        if (protocol >= 764 && !GeyserUtil.isGeyserPlayer(player.getUniqueId())) {
+        if (protocol >= 764) {
             return;
         }
 
@@ -143,6 +168,88 @@ public class PacketEventsListener extends PacketListenerAbstract {
                 return;
             }
         }
+    }
+
+    private boolean checkOldVersion(@NotNull Player player, @NotNull PacketSendEvent event,
+                                 @NotNull WrapperPlayServerEntityMetadata packet) {
+        final boolean changeY = isBedrockPlayer(player);
+        if (!changeY) {
+            return false;
+        }
+
+        final Optional<EntityData> entityData = packet.getEntityMetadata().stream()
+                .filter(e -> e.getType().equals(EntityDataTypes.ADV_COMPONENT))
+                .findFirst();
+
+        if (entityData.isEmpty()) {
+            return false;
+        }
+
+//        final Component space = Component.text("\t ");
+//
+//        final Component targetComponent = (Component) entityData.get().getValue();
+//        Component finalComponent = Component.empty();
+//        for (int i = 0; i < 10; i++) {
+//            finalComponent = finalComponent.append(space);
+//        }
+//        entityData.get().setValue(targetComponent.append(finalComponent));
+//        event.markForReEncode(true);
+//        System.out.println("Added 10 lines to " + player.getName());
+        return true;
+
+
+
+//        for (final EntityData eData : packet.getEntityMetadata()) {
+//            if (eData.getIndex() == 11) {
+//                final Vector3f old = (Vector3f) eData.getValue();
+//                final Vector3f newV = new Vector3f(old.getX(), old.getY() + 0.45f, old.getZ());
+//                System.out.println("Increasing y for packet to " + player.getName());
+//                eData.setValue(newV);
+//                event.markForReEncode(true);
+//                return;
+//            }
+//        }
+    }
+
+//    private void checkRelationalPlaceholders(@NotNull Player player, @NotNull PacketSendEvent event,
+//                                             @NotNull WrapperPlayServerEntityMetadata packet, @NotNull PacketNameTag packetNameTag) {
+//        final Player owner = packetNameTag.getOwner();
+//        if (owner == null) {
+//            return;
+//        }
+//
+//        final PAPIManager papiManager = plugin.getPlaceholderManager().getPapiManager();
+//        if (!papiManager.isPAPIEnabled()) {
+//            return;
+//        }
+//
+//        if(packetNameTag.getLines().stream().noneMatch(l -> RELATIONAL_PLACEHOLDER.matcher(l).find())) {
+//            return;
+//        }
+//
+//        final Optional<EntityData> relationalData = packet.getEntityMetadata().stream()
+//                .filter(e -> e.getType().equals(EntityDataTypes.ADV_COMPONENT))
+//                .findFirst();
+//
+//        if (relationalData.isEmpty()) {
+//            return;
+//        }
+//
+//        final Component relationalComponent = plugin.getPlaceholderManager().applyRelationalPlaceholders(player, owner, packetNameTag.getLines());
+//        relationalData.get().setValue(relationalComponent);
+//        event.markForReEncode(true);
+//    }
+
+    public boolean isBedrockPlayer(Player player) {
+        if (plugin.getHook(GeyserHook.class).map(h -> h.isBedrockPlayer(player)).orElse(false)) {
+            return true;
+        }
+
+        if (plugin.getHook(FloodgateHook.class).map(h -> h.isFloodgatePlayer(player)).orElse(false)) {
+            return true;
+        }
+
+        return GeyserUtil.isGeyserPlayer(player.getUniqueId());
     }
 
     public void onDisable() {
